Add new GET /largo endpoint
- Notice how the OpenAPI spec was automatically updated 💪
